--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <a href="GraficosInteractivos.html" class="grid-item">Factores y riesgo calculados</a>
             <a href="GraficosInteractivosRutasDias.html" class="grid-item">Resumen de anillamientos (día)</a>
             <a href="GraficosInteractivosRutasTemporal.html" class="grid-item">Resumen de anillamientos (serie completa)</a>
-            <a href="Visor_DFS_2024\index.html" class="grid-item">Visor DiFLUsion</a>
+            <a href="" class="grid-item">Visor DiFLUsion (Acceso restringido)</a>
             <a href="https://sgaicsic.maps.arcgis.com/apps/dashboards/8fd044ccc072431e919133b2949f350f" class="grid-item" target="_blank" rel="noopener noreferrer">DahFLUboard</a>
 
         </div>
