--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="images/DFS_icon.jpg" alt="Logo de Portal de DiFLUsion" class="logo">
+        <img src="images/LogoIAAP.png" alt="Logo de Portal de DiFLUsion" class="logo">
         <h1>Portal de DiFLUsion</h1>
     </header>
 
